fix mark as complete button text wrap

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -82,6 +82,8 @@
 
 .button-secondary {
   @apply bg-white text-orange-300 rounded-full border;
+  white-space: nowrap;
+  text-align: center;
 }
 
 .button-sm {
